# xbmc-addon-njoy

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  buildzip.bat  configure.in  xbmc-addon-njoy.sln  xbmc-addon-njoy.vcxproj  xbmc-addon-njoy.vcxproj.filters
addons/: Makefile.am
addons/pvr.njoy/: Makefile.am  addon.xml.in
addons/pvr.njoy/resources/: settings.xml
src/: Makefile.am
src/njoy/: .gitignore  Makefile.am  N7Data.cpp  N7Data.h  client.cpp  client.h
